[package]
name = "Temple Covid Tracker"
version = "0.1.0"
authors = ["Jacob Shin <jacobshin313@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }
reqwest = "0.9.0"
select = "0.4.3"
