[package]
name = "e11_create_message_builder"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
serenity = { path = "../../", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model",  "utils", "rustls_backend"] }
tokio = { version = "0.2", features = ["macros"] }
reqwest = "0.9.0"
select = "0.4.3"
sled = "0.34.3"
